syntax = "proto3";

package author;

import "utils.proto";

message SignUpRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    Genre genre = 4;
    string date_of_birth = 5;
}
message SignUpResponse {
    Author author = 1;
    bool success = 2;
}

message SignInResponse {
    Author author = 1;
    bool success = 2;
}

message UpdateProfileRequest {
    string id = 1;
    string name = 2;
    oneof genre_choice {
        Genre genre = 3;
    }
    string date_of_birth = 4;
}

message UpdateProfileResponse {
      string message = 1;
      bool success = 2;
}


message DeleteProfileRequest {
    string id = 1;
}
message DeleteProfileResponse {
    bool success = 1;
}

message GetAuthorRequest {
    string authorId = 1;
}

message GetAuthorResponse{
    Author author = 1;
}
service AuthorService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse) {};
    rpc SignIn(SignInRequest) returns (SignInResponse) {};
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {};
    rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse) {};
    rpc GetAuthorById (GetAuthorRequest) returns (GetAuthorResponse) {};
}