syntax = "proto3";

package book;

import "utils.proto";


message GetAllBookRequest {

}
message GetAllBookResponse{
     repeated Book books = 1;
}

message GetBookByAuthorRequest {
    string author = 1;
}

message GetBookByAuthorResponse {
    repeated Book books = 1;
}

message GetBookByIdRequest {
    string bookId = 1;
}
message GetBookByIdResponse {
    Book book = 1;
}
message AddBookRequest {
    string bookName = 1;
    Genre genre = 2;
    string authorId = 3;
    string published_date = 4;
    double price = 5;
}
message AddBookResponse {
    string message = 1;
}
message DeleteBookRequest {
    string bookId = 1;

}
message DeleteBookResponse {
    bool success = 1;
}

message UpdateBookRequest {
    string bookId = 1;
   optional string bookName = 2;
   optional  Genre genre = 3;
   optional string published_date = 4;
   optional double price = 5;
}

message UpdateBookResponse {
    string message = 1;
}
message GetBookByDateRequest{
    string from = 1;
    string to = 2;
}

message GetBookByDateResponse{
    repeated Book books = 1;
}
message GetBooksPerPageRequest {
    int32 pageNo = 1;
}
message GetBooksPerPageResponse {
    repeated Book books = 1;
}
service BookService {
    rpc AddBook (AddBookRequest) returns (AddBookResponse){};
    rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse) {};
    rpc GetAllBook (GetAllBookRequest) returns (GetAllBookResponse){};
    rpc GetBookByAuthor (GetBookByAuthorRequest) returns (GetBookByAuthorResponse){};
    rpc GetBookById (GetBookByIdRequest) returns (GetBookByIdResponse){};
    rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse) {};
    rpc GetBookByDate (GetBookByDateRequest) returns (GetBookByDateResponse){};
    rpc GetBooksPerPage (GetBooksPerPageRequest) returns (GetBooksPerPageResponse){};
} 